--- a/.github/workflows/jobrotator.yml
+++ b/.github/workflows/jobrotator.yml
@@ -1,32 +1,29 @@
-name: Job Rotator Auto Fetch
+name: Job Rotator Automation
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Every hour
-  workflow_dispatch:
+    - cron: '0 */6 * * *'  # every 6 hours
+  workflow_dispatch:       # allows manual run
 
 jobs:
-  fetch_jobs:
+  rotate-jobs:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.x
+      - name: Set up jq + curl
+        run: sudo apt-get install -y jq curl
 
-      - name: Install Deps
-        run: pip install -r requirements.txt
-
-      - name: Run Job Rotator
-        run: bash job_rotator.sh
-
-      - name: Commit Updated Jobs
+      - name: Run job rotator script
         run: |
-          git config user.name "GitHub Actions"
+          chmod +x job_rotator.sh
+          ./job_rotator.sh
+
+      - name: Commit job_results.log
+        run: |
+          git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add job_results.log jobs.json || true
-          git commit -m "🤖 Update jobs via CI" || echo "No changes"
+          git add job_results.log
+          git commit -m "🔄 Auto-update job results" || echo "No changes to commit"
           git push
