--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/kit": "latest",
-    "svelte": "^4.2.1",
-    "vite": "^5.2.0"
-  },
-  "type": "module"
+    "@sveltejs/kit": "next",
+    "svelte": "^4.2.0",
+    "vite": "^5.0.0"
+  }
 }
